--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^16.13.1",
     "react-geocode": "^0.2.1",
     "react-leaflet": "^2.7.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "rsuite": "^4.8.0"
   },
